[gd_scene load_steps=2 format=3 uid="uid://chn34smcdwjxg"]

[ext_resource type="Script" path="res://scenes/menu/level_end_menu.gd" id="1_bulf6"]

[node name="LevelEndMenu" type="CanvasLayer"]
script = ExtResource("1_bulf6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelTimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level time: sec"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Coins: "
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NextLevelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Next Level"

[node name="MainMenuButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
